--- a/quick/css/style.css
+++ b/quick/css/style.css
@@ -16,3 +16,40 @@ a:hover, a:focus {
   color: #999999;
   text-decoration: none;
 }
+
+/* line 4, ../scss/_typography.scss */
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  line-height: 1.1;
+  color: #999999;
+}
+
+/* line 12, ../scss/_typography.scss */
+h1,
+h2 {
+  text-transform: uppercase;
+}
+
+/* line 16, ../scss/_typography.scss */
+h1 {
+  font-size: 4em;
+}
+
+/* line 20, ../scss/_typography.scss */
+h2 {
+  font-size: 2em;
+}
+
+/* line 24, ../scss/_typography.scss */
+h3 {
+  font-size: 1.3em;
+}
+
+/* line 28, ../scss/_typography.scss */
+h4 {
+  font-size: 1em;
+}
