--- a/quick/scss/_variables.scss
+++ b/quick/scss/_variables.scss
@@ -11,11 +11,10 @@ $text-color: $gray-dark; // global text color for <body>
 $link-color: $gray-dark; // global textual link color
 $link-hover-color: $gray-dark; // global hover link color
 $link-hover-decoration: none; // global link decoration
+
 // Typography
-$font-family-base: "Lato",
-sans-serif; // enter font stack for Lato web font
-$font-family-headings: "Montserrat",
-sans-serif; // enter font stack for Montserrat web font
+$font-family-base: 'Lato', sans-serif; // enter font stack for Lato web font
+$font-family-headings: "Montserrat", sans-serif; // enter font stack for Montserrat web font
 $font-size-base: 14px; // same as Bootstrap default
 $font-size-h1:4em; // 4x base 
 $font-size-h2:2em; // 2x base
@@ -25,3 +24,15 @@ $line-height-base: 1.428571429; // same as Bootstrap default
 $headings-font-weight: 700;
 $headings-line-height: 1.1;
 $headings-color: $gray-dark;
+
+// Buttons
+$btn-font-family: 'Montserrat', sans-serif;
+$btn-font-size:.8em; // .8x base
+$btn-font-weight: 200; //lighter than default
+
+// Navbar
+$navbar-default-bg: $white;
+$navbar-default-font-family: $font-family-headings;
+$navbar-default-link-color: $gray-dark;
+$navbar-default-link-hover-color: $blue;
+$navbar-brand-color: $gray-dark;
