--- a/quick/scss/_typography.scss
+++ b/quick/scss/_typography.scss
@@ -32,7 +32,7 @@ h4 {
 // classes
 .home-text {
     color: $white;
-    text-transform: ; // refer to PNG
+    text-transform: uppercase; // refer to PNG
     padding: 10px 0;
     border-bottom: 3px solid rgba(255, 255, 255, 0.15);
     margin: 20px 0;
