--- a/quick/css/style.css
+++ b/quick/css/style.css
@@ -1,4 +1,4 @@
-/* line 1, /Users/Daifuku/Documents/vmd142/quick/scss/_scaffolding.scss */
+/* line 1, ../scss/_scaffolding.scss */
 body {
   font-family: "Lato", sans-serif;
   font-size: 14px;
@@ -7,17 +7,17 @@ body {
   background-color: white;
 }
 
-/* line 9, /Users/Daifuku/Documents/vmd142/quick/scss/_scaffolding.scss */
+/* line 9, ../scss/_scaffolding.scss */
 a {
   color: #333333;
 }
-/* line 13, /Users/Daifuku/Documents/vmd142/quick/scss/_scaffolding.scss */
+/* line 13, ../scss/_scaffolding.scss */
 a:hover, a:focus {
   color: #333333;
   text-decoration: none;
 }
 
-/* line 4, /Users/Daifuku/Documents/vmd142/quick/scss/_typography.scss */
+/* line 4, ../scss/_typography.scss */
 h1,
 h2,
 h3,
@@ -28,33 +28,33 @@ h4 {
   color: #333333;
 }
 
-/* line 12, /Users/Daifuku/Documents/vmd142/quick/scss/_typography.scss */
+/* line 12, ../scss/_typography.scss */
 h1,
 h2 {
   text-transform: uppercase;
 }
 
-/* line 16, /Users/Daifuku/Documents/vmd142/quick/scss/_typography.scss */
+/* line 16, ../scss/_typography.scss */
 h1 {
   font-size: 4em;
 }
 
-/* line 20, /Users/Daifuku/Documents/vmd142/quick/scss/_typography.scss */
+/* line 20, ../scss/_typography.scss */
 h2 {
   font-size: 2em;
 }
 
-/* line 24, /Users/Daifuku/Documents/vmd142/quick/scss/_typography.scss */
+/* line 24, ../scss/_typography.scss */
 h3 {
   font-size: 1.3em;
 }
 
-/* line 28, /Users/Daifuku/Documents/vmd142/quick/scss/_typography.scss */
+/* line 28, ../scss/_typography.scss */
 h4 {
   font-size: 1em;
 }
 
-/* line 33, /Users/Daifuku/Documents/vmd142/quick/scss/_typography.scss */
+/* line 33, ../scss/_typography.scss */
 .home-text {
   color: white;
   text-transform: uppercase;
@@ -65,51 +65,57 @@ h4 {
   font-weight: 200;
 }
 
-/* line 43, /Users/Daifuku/Documents/vmd142/quick/scss/_typography.scss */
+/* line 43, ../scss/_typography.scss */
 .home-h1 {
   color: #33ccff;
-  font-size: 4.5em;
+  font-size: 2.5em;
   font-weight: 200;
   margin-top: 40px;
   margin-bottom: 40px;
 }
 
-/* line 51, /Users/Daifuku/Documents/vmd142/quick/scss/_typography.scss */
+@media (min-width: 768px) {
+  /* line 52, ../scss/_typography.scss */
+  .home-h1 {
+    font-size: 4.5em;
+  }
+}
+/* line 57, ../scss/_typography.scss */
 .home-h1 > span {
   color: white;
 }
 
-/* line 55, /Users/Daifuku/Documents/vmd142/quick/scss/_typography.scss */
+/* line 61, ../scss/_typography.scss */
 .lead {
   letter-spacing: 1px;
   margin-bottom: 60px;
 }
 
-/* line 1, /Users/Daifuku/Documents/vmd142/quick/scss/_navbar.scss */
+/* line 1, ../scss/_navbar.scss */
 .navbar-default {
   background-color: white;
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
 }
 
-/* line 7, /Users/Daifuku/Documents/vmd142/quick/scss/_navbar.scss */
+/* line 7, ../scss/_navbar.scss */
 .navbar-default .navbar-brand {
   font-weight: 700;
   color: #333333;
   font-size: 1.5em;
 }
 
-/* line 13, /Users/Daifuku/Documents/vmd142/quick/scss/_navbar.scss */
+/* line 13, ../scss/_navbar.scss */
 .navbar-default .navbar-nav > li > a {
   color: #333333;
 }
-/* line 16, /Users/Daifuku/Documents/vmd142/quick/scss/_navbar.scss */
+/* line 16, ../scss/_navbar.scss */
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
   color: #33ccff;
 }
 
-/* line 1, /Users/Daifuku/Documents/vmd142/quick/scss/_buttons.scss */
-.btn-theme, .btn-dark, .btn-cta, .btn-cta-o {
+/* line 1, ../scss/_buttons.scss */
+.btn-theme, .btn-blog, .btn-dark, .btn-cta, .btn-cta-o {
   font-family: "Montserrat", sans-serif;
   font-size: 0.8em;
   font-weight: 200;
@@ -122,115 +128,139 @@ h4 {
   transition: all 200ms ease-in;
 }
 
-/* line 11, /Users/Daifuku/Documents/vmd142/quick/scss/_buttons.scss */
+/* line 11, ../scss/_buttons.scss */
+.btn-blog {
+  background: #333333;
+  color: white;
+  padding: 2px;
+  font-weight: 200;
+}
+
+/* line 19, ../scss/_buttons.scss */
 .btn-dark {
   border: 1px solid rgba(255, 255, 255, 0.1);
   background: rgba(0, 0, 0, 0.3);
   color: #666666;
 }
-/* line 18, /Users/Daifuku/Documents/vmd142/quick/scss/_buttons.scss */
+/* line 26, ../scss/_buttons.scss */
 .btn-dark:hover, .btn-dark:focus {
   background: #000;
   color: white;
 }
 
-/* line 24, /Users/Daifuku/Documents/vmd142/quick/scss/_buttons.scss */
+/* line 32, ../scss/_buttons.scss */
 .btn-cta {
   background-color: #33ccff;
   color: white;
 }
-/* line 30, /Users/Daifuku/Documents/vmd142/quick/scss/_buttons.scss */
+/* line 38, ../scss/_buttons.scss */
 .btn-cta:hover, .btn-cta:focus {
   background-color: deepskyblue;
   color: white;
 }
 
-/* line 36, /Users/Daifuku/Documents/vmd142/quick/scss/_buttons.scss */
+/* line 44, ../scss/_buttons.scss */
 .btn-cta-o {
   color: white;
   border: 1px solid white;
 }
-/* line 42, /Users/Daifuku/Documents/vmd142/quick/scss/_buttons.scss */
+/* line 50, ../scss/_buttons.scss */
 .btn-cta-o:hover, .btn-cta-o:focus {
   background-color: white;
   color: #333333;
 }
 
-/* line 1, /Users/Daifuku/Documents/vmd142/quick/scss/_forms.scss */
+/* line 1, ../scss/_forms.scss */
 .form-control {
   border-radius: 0;
   margin-bottom: 30px;
+  font-size: 12px;
+  color: #666666;
+  background: white;
+  transition: all 200ms ease-in;
 }
 
-/* line 6, /Users/Daifuku/Documents/vmd142/quick/scss/_forms.scss */
+/* line 10, ../scss/_forms.scss */
+.form-control:focus {
+  background: white;
+  border-color: #666666;
+}
+
+/* line 15, ../scss/_forms.scss */
 label {
   font-weight: 300;
 }
 
-/* line 1, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 1, ../scss/_others.scss */
 #home {
   background-color: #333333;
   padding: 40px 0;
 }
 
-/* line 6, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 6, ../scss/_others.scss */
 #cta-1 {
   background-color: white;
   padding: 40px 0;
 }
 
-/* line 11, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 11, ../scss/_others.scss */
 #testimonials {
   background-color: #333333;
 }
 
-/* line 15, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 15, ../scss/_others.scss */
 #cta-2 {
   background-color: #33ccff;
   padding: 40px 0;
 }
 
-/* line 20, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 20, ../scss/_others.scss */
 #services {
   background-color: #333333;
 }
 
-/* line 25, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 24, ../scss/_others.scss */
+#facts {
+  background-color: #333333;
+}
+
+/* line 29, ../scss/_others.scss */
 #cta-3 {
   background-color: #333333;
   padding: 40px 0;
 }
 
-/* line 30, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 34, ../scss/_others.scss */
 #footer {
   background-color: #333333;
 }
 
-/* line 34, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 38, ../scss/_others.scss */
 .section-padding {
   padding-top: 60px;
   padding-bottom: 50px;
 }
 
-/* line 39, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 43, ../scss/_others.scss */
 .section-heading {
   margin-bottom: 40px;
 }
 
-/* line 45, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 50, ../scss/_others.scss */
 .color-reverse,
 .color-reverse h2,
+.color-reverse h3,
 .color-reverse .icon {
   color: white;
 }
 
-/* line 50, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 55, ../scss/_others.scss */
 .color-reverse .icon:before,
 .color-reverse .icon:after {
   border-bottom-color: white;
 }
 
-/* line 54, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 59, ../scss/_others.scss */
 .icon {
   display: inline-block;
   font-size: 1.3em;
@@ -241,7 +271,7 @@ label {
   color: #33ccff;
 }
 
-/* line 65, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 70, ../scss/_others.scss */
 .icon:before,
 .icon:after {
   display: inline-block;
@@ -252,28 +282,28 @@ label {
   width: 50px;
 }
 
-/* line 74, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 79, ../scss/_others.scss */
 .icon:before {
   left: 0;
 }
 
-/* line 78, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 83, ../scss/_others.scss */
 .icon:after {
   right: 0;
 }
 
-/* line 82, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 87, ../scss/_others.scss */
 .icon-bg {
   color: white;
 }
 
-/* line 87, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 92, ../scss/_others.scss */
 .icon-bg:before,
 .icon-bg:after {
   border-bottom-color: white;
 }
 
-/* line 91, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 96, ../scss/_others.scss */
 .about-col .fa {
   width: 90px;
   height: 90px;
@@ -283,12 +313,19 @@ label {
   background-color: white;
 }
 
-/* line 100, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 105, ../scss/_others.scss */
 .services-col {
   color: #33ccff;
+  text-align: center;
 }
 
-/* line 104, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+@media (min-width: 768px) {
+  /* line 111, ../scss/_others.scss */
+  .services-col {
+    text-align: left;
+  }
+}
+/* line 116, ../scss/_others.scss */
 .services-col h3 {
   color: #33ccff;
   margin-top: 0;
@@ -297,7 +334,7 @@ label {
   font-size: 1.75em;
 }
 
-/* line 112, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 126, ../scss/_others.scss */
 .services-col p {
   color: #666666;
   letter-spacing: 1px;
@@ -305,7 +342,7 @@ label {
   line-height: 2;
 }
 
-/* line 119, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 133, ../scss/_others.scss */
 .services-col .fa {
   width: 70px;
   height: 70px;
@@ -317,12 +354,12 @@ label {
   margin-bottom: 10px;
 }
 
-/* line 130, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 144, ../scss/_others.scss */
 .contact-hours .fa {
   color: #33ccff;
 }
 
-/* line 134, /Users/Daifuku/Documents/vmd142/quick/scss/_others.scss */
+/* line 148, ../scss/_others.scss */
 .social-channels .fa {
   width: 40px;
   height: 40px;
@@ -331,4 +368,71 @@ label {
   color: #666666;
   background-color: white;
   margin-bottom: 10px;
+}
+
+/* line 158, ../scss/_others.scss */
+.author {
+  color: #33ccff;
+  font-size: 1.1em;
+}
+
+/* line 163, ../scss/_others.scss */
+.item-img-wrap {
+  position: relative;
+  text-align: center;
+  overflow: hidden;
+}
+
+/* line 169, ../scss/_others.scss */
+.item-img-wrap img {
+  transition: all 200ms linear;
+}
+
+/* line 172, ../scss/_others.scss */
+.item-img-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+
+/* line 179, ../scss/_others.scss */
+.item-img-overlay span {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: url(../img/plus.png) no-repeat center center rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  transition: opacity 250ms linear;
+}
+
+/* line 190, ../scss/_others.scss */
+.item-img-wrap:hover .item-img-overlay span {
+  opacity: 1;
+}
+
+/* line 193, ../scss/_others.scss */
+.item-img-wrap:hover img {
+  transform: scale(1.1);
+}
+
+/* line 202, ../scss/_others.scss */
+.about-col,
+.team-col,
+.services-col,
+.portfolio-col,
+.facts-col,
+.blog-co {
+  margin-bottom: 40px;
+}
+
+/* line 206, ../scss/_others.scss */
+.blog-col span {
+  color: #666666;
+  font-size: 0.9em;
+  display: inline-block;
+  margin-bottom: 20px;
 }
