--- a/quick/scss/_typography.scss
+++ b/quick/scss/_typography.scss
@@ -42,10 +42,16 @@ h4 {
 
 .home-h1 {
     color: $blue;
-    font-size: 4.5em; // 4.5x base
+    font-size: 2.5em;
     font-weight: 200;
     margin-top: 40px;
     margin-bottom: 40px;
+}
+
+@media (min-width: 768px) {
+    .home-h1 {
+        font-size: 4.5em; // 4.5x base font-size
+    }
 }
 
 .home-h1>span {
