--- a/quick/scss/_typography.scss
+++ b/quick/scss/_typography.scss
@@ -34,7 +34,7 @@ h4 {
     color: $white;
     text-transform: uppercase; // refer to PNG
     padding: 10px 0;
-    border-bottom: 3px solid rgba(255, 255, 255, 0.15);
+    border-bottom: 3px solid rgba(255,255,255,0.15);
     margin: 20px 0;
     letter-spacing: 1px;
     font-weight: 200;
