--- a/quick/css/style.css
+++ b/quick/css/style.css
@@ -3,17 +3,17 @@ body {
   font-family: "Lato", sans-serif;
   font-size: 14px;
   line-height: 1.42857;
-  color: #333333;
+  color: #666666;
   background-color: white;
 }
 
 /* line 9, ../scss/_scaffolding.scss */
 a {
-  color: #333333;
+  color: #666666;
 }
 /* line 13, ../scss/_scaffolding.scss */
 a:hover, a:focus {
-  color: #333333;
+  color: #666666;
   text-decoration: none;
 }
 
@@ -25,7 +25,7 @@ h4 {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   line-height: 1.1;
-  color: #333333;
+  color: #666666;
 }
 
 /* line 12, ../scss/_typography.scss */
@@ -67,7 +67,7 @@ h4 {
 
 /* line 43, ../scss/_typography.scss */
 .home-h1 {
-  color: #33ccff;
+  color: #2dd8ff;
   font-size: 2.5em;
   font-weight: 200;
   margin-top: 40px;
@@ -101,17 +101,17 @@ h4 {
 /* line 7, ../scss/_navbar.scss */
 .navbar-default .navbar-brand {
   font-weight: 700;
-  color: #333333;
+  color: #666666;
   font-size: 1.5em;
 }
 
 /* line 13, ../scss/_navbar.scss */
 .navbar-default .navbar-nav > li > a {
-  color: #333333;
+  color: #666666;
 }
 /* line 16, ../scss/_navbar.scss */
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-  color: #33ccff;
+  color: #2dd8ff;
 }
 
 /* line 1, ../scss/_buttons.scss */
@@ -128,43 +128,43 @@ h4 {
   transition: all 200ms ease-in;
 }
 
-/* line 11, ../scss/_buttons.scss */
+/* line 12, ../scss/_buttons.scss */
 .btn-blog {
-  background: #333333;
+  background: #666666;
   color: white;
   padding: 2px;
   font-weight: 200;
 }
 
-/* line 19, ../scss/_buttons.scss */
+/* line 20, ../scss/_buttons.scss */
 .btn-dark {
   border: 1px solid rgba(255, 255, 255, 0.1);
   background: rgba(0, 0, 0, 0.3);
-  color: #666666;
+  color: #888888;
 }
-/* line 26, ../scss/_buttons.scss */
+/* line 27, ../scss/_buttons.scss */
 .btn-dark:hover, .btn-dark:focus {
   background: #000;
   color: white;
 }
 
-/* line 32, ../scss/_buttons.scss */
+/* line 33, ../scss/_buttons.scss */
 .btn-cta {
-  background-color: #33ccff;
+  background-color: #2dd8ff;
   color: white;
 }
-/* line 38, ../scss/_buttons.scss */
+/* line 39, ../scss/_buttons.scss */
 .btn-cta:hover, .btn-cta:focus {
-  background-color: deepskyblue;
+  background-color: #00cbf9;
   color: white;
 }
 
-/* line 44, ../scss/_buttons.scss */
+/* line 45, ../scss/_buttons.scss */
 .btn-cta-o {
   color: white;
   border: 1px solid white;
 }
-/* line 50, ../scss/_buttons.scss */
+/* line 51, ../scss/_buttons.scss */
 .btn-cta-o:hover, .btn-cta-o:focus {
   background-color: white;
   color: #333333;
@@ -175,15 +175,15 @@ h4 {
   border-radius: 0;
   margin-bottom: 30px;
   font-size: 12px;
-  color: #666666;
+  color: #888888;
   background: white;
   transition: all 200ms ease-in;
 }
 
 /* line 10, ../scss/_forms.scss */
 .form-control:focus {
-  background: white;
-  border-color: #666666;
+  background: #f7f7f7;
+  border-color: #888888;
 }
 
 /* line 15, ../scss/_forms.scss */
@@ -193,46 +193,46 @@ label {
 
 /* line 1, ../scss/_others.scss */
 #home {
-  background-color: #333333;
+  background-color: #666666;
   padding: 40px 0;
 }
 
 /* line 6, ../scss/_others.scss */
 #cta-1 {
-  background-color: white;
+  background-color: #f7f7f7;
   padding: 40px 0;
 }
 
 /* line 11, ../scss/_others.scss */
 #testimonials {
-  background-color: #333333;
+  background-color: #666666;
 }
 
 /* line 15, ../scss/_others.scss */
 #cta-2 {
-  background-color: #33ccff;
+  background-color: #2dd8ff;
   padding: 40px 0;
 }
 
 /* line 20, ../scss/_others.scss */
 #services {
-  background-color: #333333;
+  background-color: #666666;
 }
 
 /* line 24, ../scss/_others.scss */
 #facts {
-  background-color: #333333;
+  background-color: #666666;
 }
 
 /* line 29, ../scss/_others.scss */
 #cta-3 {
-  background-color: #333333;
+  background-color: #666666;
   padding: 40px 0;
 }
 
 /* line 34, ../scss/_others.scss */
 #footer {
-  background-color: #333333;
+  background-color: #666666;
 }
 
 /* line 38, ../scss/_others.scss */
@@ -268,7 +268,7 @@ label {
   width: 130px;
   margin: 0 auto;
   position: relative;
-  color: #33ccff;
+  color: #2dd8ff;
 }
 
 /* line 70, ../scss/_others.scss */
@@ -276,7 +276,7 @@ label {
 .icon:after {
   display: inline-block;
   content: "";
-  border-bottom: 1px solid #33ccff;
+  border-bottom: 1px solid #2dd8ff;
   position: absolute;
   top: 10px;
   width: 50px;
@@ -308,14 +308,14 @@ label {
   width: 90px;
   height: 90px;
   line-height: 90px;
-  color: #666666;
+  color: #888888;
   border-radius: 50%;
-  background-color: white;
+  background-color: #f7f7f7;
 }
 
 /* line 105, ../scss/_others.scss */
 .services-col {
-  color: #33ccff;
+  color: #2dd8ff;
   text-align: center;
 }
 
@@ -327,63 +327,63 @@ label {
 }
 /* line 116, ../scss/_others.scss */
 .services-col h3 {
-  color: #33ccff;
+  color: #2dd8ff;
   margin-top: 0;
   font-weight: 200;
   letter-spacing: 1px;
   font-size: 1.75em;
 }
 
-/* line 126, ../scss/_others.scss */
+/* line 124, ../scss/_others.scss */
 .services-col p {
-  color: #666666;
+  color: #888888;
   letter-spacing: 1px;
   font-weight: 200;
   line-height: 2;
 }
 
-/* line 133, ../scss/_others.scss */
+/* line 131, ../scss/_others.scss */
 .services-col .fa {
   width: 70px;
   height: 70px;
   line-height: 70px;
   text-align: center;
   color: white;
-  background-color: #33ccff;
+  background-color: #2dd8ff;
   border-radius: 35px;
   margin-bottom: 10px;
 }
 
-/* line 144, ../scss/_others.scss */
+/* line 142, ../scss/_others.scss */
 .contact-hours .fa {
-  color: #33ccff;
+  color: #2dd8ff;
 }
 
-/* line 148, ../scss/_others.scss */
+/* line 146, ../scss/_others.scss */
 .social-channels .fa {
   width: 40px;
   height: 40px;
   line-height: 40px;
   text-align: center;
-  color: #666666;
-  background-color: white;
+  color: #888888;
+  background-color: #f7f7f7;
   margin-bottom: 10px;
 }
 
-/* line 158, ../scss/_others.scss */
+/* line 156, ../scss/_others.scss */
 .author {
-  color: #33ccff;
+  color: #2dd8ff;
   font-size: 1.1em;
 }
 
-/* line 163, ../scss/_others.scss */
+/* line 161, ../scss/_others.scss */
 .item-img-wrap {
   position: relative;
   text-align: center;
   overflow: hidden;
 }
 
-/* line 169, ../scss/_others.scss */
+/* line 168, ../scss/_others.scss */
 .item-img-wrap img {
   transition: all 200ms linear;
 }
@@ -397,7 +397,7 @@ label {
   top: 0;
 }
 
-/* line 179, ../scss/_others.scss */
+/* line 180, ../scss/_others.scss */
 .item-img-overlay span {
   width: 100%;
   height: 100%;
@@ -409,17 +409,17 @@ label {
   transition: opacity 250ms linear;
 }
 
-/* line 190, ../scss/_others.scss */
+/* line 191, ../scss/_others.scss */
 .item-img-wrap:hover .item-img-overlay span {
   opacity: 1;
 }
 
-/* line 193, ../scss/_others.scss */
+/* line 195, ../scss/_others.scss */
 .item-img-wrap:hover img {
   transform: scale(1.1);
 }
 
-/* line 202, ../scss/_others.scss */
+/* line 204, ../scss/_others.scss */
 .about-col,
 .team-col,
 .services-col,
@@ -429,9 +429,9 @@ label {
   margin-bottom: 40px;
 }
 
-/* line 206, ../scss/_others.scss */
+/* line 208, ../scss/_others.scss */
 .blog-col span {
-  color: #666666;
+  color: #888888;
   font-size: 0.9em;
   display: inline-block;
   margin-bottom: 20px;
