--- a/quick/css/style.css
+++ b/quick/css/style.css
@@ -17,6 +17,12 @@ a:hover, a:focus {
   text-decoration: none;
 }
 
+/* line 20, ../scss/_scaffolding.scss */
+html,
+body {
+  height: 100%;
+}
+
 /* line 4, ../scss/_typography.scss */
 h1,
 h2,
